refactor(void): 重构